[project]
name = "ComfyUI"
version = "0.3.29"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "S307", # suspicious-eval-usage
  "S102", # exec
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]
exclude = ["*.ipynb"]

[tool.setuptools]
packages = [
    "comfy",
    "comfy.cldm",
    "comfy.comfy_types",
    "comfy.comfy_types.examples",
    "comfy_extras",
    "comfy.extra_samplers",
    "comfy_extras.chainner_models",
    "comfy.image_encoders",
    "comfy.k_diffusion",
    "comfy.ldm",
    "comfy.ldm.audio",
    "comfy.ldm.aura",
    "comfy.ldm.cascade",
    "comfy.ldm.cosmos",
    "comfy.ldm.cosmos.cosmos_tokenizer",
    "comfy.ldm.flux",
    "comfy.ldm.genmo",
    "comfy.ldm.genmo.joint_model",
    "comfy.ldm.genmo.vae",
    "comfy.ldm.hidream",
    "comfy.ldm.hunyuan3d",
    "comfy.ldm.hunyuan_video",
    "comfy.ldm.hydit",
    "comfy.ldm.lightricks",
    "comfy.ldm.lightricks.vae",
    "comfy.ldm.lumina",
    "comfy.ldm.models",
    "comfy.ldm.modules",
    "comfy.ldm.modules.diffusionmodules",
    "comfy.ldm.modules.distributions",
    "comfy.ldm.modules.encoders",
    "comfy.ldm.pixart",
    "comfy.ldm.wan",
    "comfy.sd1_tokenizer",
    "comfy.t2i_adapter",
    "comfy.taesd",
    "comfy.text_encoders",
    "comfy.text_encoders.hydit_clip_tokenizer",
    "comfy.text_encoders.llama_tokenizer",
    "comfy.text_encoders.t5_pile_tokenizer",
    "comfy.text_encoders.t5_tokenizer",
    "comfy.weight_adapter"
]
py-modules = [
    "folder_paths",
    "main",
    "execution",
    "server",
    "nodes"
]
